<resources>
    <string name="app_name">BeerMenu</string>
    <string name="default_name">Cerveja Teste</string>
    <string name="breweded_in">Fabricado em:</string>
    <string name="on_click">onClick</string>
    <string name="favorite">favorite</string>
    <string name="filter">Filtrar</string>
    <string name="cancel">Cancelar</string>
    <string name="filter_select">Selecione os Filtros</string>
    <string name="hint_date">Exp (mm-yyyy)</string>
    <string name="name">Nome:</string>
    <string name="yeast">Levedura:</string>
    <string name="brewed_before">Fabricado antes de:</string>
    <string name="brewed_after">Fabricado depois de:</string>
    <string name="invalide_input">Entrada inválida.</string>
    <string name="error_conection">Houve uma falha ao tentar se conectar com o servidor.</string>
    <string name="favorite_select">Selecionar Favoritos</string>
    <string name="abv_gt">ABV maior que:</string>
    <string name="abv_lt">ABV menor que:</string>
    <string name="ibu_gt">IBU maior que:</string>
    <string name="ibu_lt">IBU menor que:</string>
    <string name="ebc_gt">EBC maior que:</string>
    <string name="ebc_lt">EBC menor que:</string>
    <string name="hops">Lúpulo:</string>
    <string name="malt">Malte:</string>
    <string name="food">Comida:</string>
    <string name="ids">ID\'s</string>
    <string name="hint_id">Exp (A|B|C)</string>
    <string name="toolbar_title">Menu de Cervejas</string>
    <string name="beer">cerveja</string>
    <string name="beer_detail">Detalhes da cerveja</string>
    <string name="ingredients">Ingredientes</string>
    <string name="description">Descrição</string>
    <string name="default_big_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="amount">Montante:</string>
    <string name="add">Add:</string>
    <string name="attribute">Atributo:</string>

</resources>
