<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/filter_select"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBox1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/name" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkBox1"
            android:layout_toRightOf="@+id/checkBox1"
            android:enabled="false"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/editText1"
            android:text="@string/yeast" />

        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkBox2"
            android:layout_toRightOf="@+id/checkBox2"
            android:layout_below="@id/editText1"
            android:enabled="false"/>

        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBox3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/brewed_before" />



        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkBox3"
            android:layout_toRightOf="@+id/checkBox3"
            android:layout_below="@id/editText2">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:enabled="false" />

        </android.support.design.widget.TextInputLayout>


        <android.support.v7.widget.AppCompatCheckBox
            android:id="@+id/checkBox4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/viewLineBottom"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:text="@string/brewed_after" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputLayout4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/checkBox4"
            android:layout_toRightOf="@+id/checkBox4"
            android:layout_below="@id/inputLayout3">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/editText4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_date"
                android:enabled="false"/>

        </android.support.design.widget.TextInputLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:alpha="0.12"
            android:layout_below="@id/inputLayout4"
            android:background="@android:color/black"
            android:id="@+id/viewLineBottom"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonCancel"
            android:layout_below="@+id/viewLineBottom"
            android:layout_toLeftOf="@+id/buttonSave"
            android:layout_toStartOf="@+id/buttonSave"
            android:text="@string/cancel"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSave"
            android:layout_below="@+id/viewLineBottom"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:text="@string/filter"/>
    </RelativeLayout>




</LinearLayout>