<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:title="@string/beer_detail"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbarTop">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:id="@+id/cardBeer"
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_margin="10dp">
                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/imageBeer"
                    android:layout_width="@dimen/image_dimension"
                    android:layout_height="match_parent"
                    app:placeholderImage="@drawable/beer"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    app:actualImageScaleType="centerInside"
                    />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardDescription"
                android:layout_toRightOf="@+id/cardBeer"
                android:layout_toEndOf="@+id/cardBeer"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/cardIngredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:foreground="?android:attr/selectableItemBackground">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textViewTitleDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"
                        android:text="@string/description"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="20sp" />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/textViewTitleDescription">

                        <TextView
                            android:id="@+id/textViewDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/default_big_text"
                            android:textColor="@color/colorTextSecondary" />

                    </ScrollView>

                </RelativeLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/cardIngredients"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/cardBeer"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                <TextView
                    android:id="@+id/textViewTitleIngredients"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:text="@string/ingredients"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textViewMalt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/textViewTitleIngredients"
                    android:layout_marginTop="10dp"
                    android:text="@string/malt"
                    android:textColor="@color/colorTextPrimary" />

                    <TextView
                        android:id="@+id/textViewMaltList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/textViewMalt"
                        android:layout_marginTop="10dp"
                        android:text="@string/malt"
                        android:textColor="@color/colorTextSecondary" />

                    <TextView
                        android:id="@+id/textViewHops"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/textViewMaltList"
                        android:layout_marginTop="10dp"
                        android:text="@string/hops"
                        android:textColor="@color/colorTextPrimary" />

                    <TextView
                        android:id="@+id/textViewHopsList"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/textViewHops"
                        android:layout_marginTop="10dp"
                        android:text="@string/hops"
                        android:textColor="@color/colorTextSecondary" />

                    <TextView
                        android:id="@+id/textViewYest"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/textViewHopsList"
                        android:layout_marginTop="10dp"
                        android:text="@string/yeast"
                        android:textColor="@color/colorTextPrimary" />

                    <TextView
                        android:id="@+id/textViewYestName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/textViewYest"
                        android:layout_toRightOf="@id/textViewYest"
                        android:layout_toEndOf="@+id/textViewYest"
                        android:layout_marginLeft="10dp"
                        android:layout_marginStart="10dp"
                        android:text="@string/yeast"
                        android:textColor="@color/colorTextSecondary" />



                </RelativeLayout>
            </android.support.v7.widget.CardView>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>